Adding task-icon-alignment to mgt-tasks

--- a/src/components/mgt-tasks/mgt-tasks.scss
+++ b/src/components/mgt-tasks/mgt-tasks.scss
@@ -10,16 +10,14 @@
 
 $tasks-background-color: var(--tasks-background-color, #f8f8f8);
 
-$task-icon-background-completed: var(--task-icon-background-completed, $ms-color-sharedGreenCyan10);
+$task-icon-alignment: var(--task-icon-alignment, flex-start);
 $task-icon-background: var(--task-icon-background, transparent);
-
-$task-icon-border-completed: var(--task-icon-border-completed, solid 1px white);
+$task-icon-background-completed: var(--task-icon-background-completed, $ms-color-sharedGreenCyan10);
 $task-icon-border: var(--task-icon-border, solid 1px $ms-color-gray120);
-
+$task-icon-border-completed: var(--task-icon-border-completed, solid 1px white);
+$task-icon-border-radius: var(--task-icon-border-radius, 50%);
 $task-icon-color: var(--task-icon-color, black);
 $task-icon-color-completed: var(--task-icon-color-completed, white);
-
-$task-icon-border-radius: var(--task-icon-border-radius, 50%);
 
 mgt-tasks,
 :host {
@@ -592,7 +590,7 @@ mgt-tasks,
       color: white;
       cursor: pointer;
       display: flex;
-      align-items: flex-start;
+      align-items: $task-icon-alignment;
       margin: 21px 10px 20px 20px;
 
       user-select: none;
