[Tasks] Adding additional CSS custom properties (#271)
* added more custom properties for tasks

* fixed icon rotating

* Adding task-icon-alignment to mgt-tasks

* Update custom elements to enable storybook to detect new css properties

Co-authored-by: Shane Weaver <shweaver@microsoft.com>
Co-authored-by: Beth Pan <beth_panx@hotmail.com>

--- a/src/components/mgt-tasks/mgt-tasks.scss
+++ b/src/components/mgt-tasks/mgt-tasks.scss
@@ -8,12 +8,23 @@
 @import '../../styles/shared-styles.scss';
 @import '../../../node_modules/office-ui-fabric-core/dist/sass/References';
 
+$tasks-background-color: var(--tasks-background-color, #f8f8f8);
+
+$task-icon-alignment: var(--task-icon-alignment, flex-start);
+$task-icon-background: var(--task-icon-background, transparent);
+$task-icon-background-completed: var(--task-icon-background-completed, $ms-color-sharedGreenCyan10);
+$task-icon-border: var(--task-icon-border, solid 1px $ms-color-gray120);
+$task-icon-border-completed: var(--task-icon-border-completed, solid 1px white);
+$task-icon-border-radius: var(--task-icon-border-radius, 50%);
+$task-icon-color: var(--task-icon-color, black);
+$task-icon-color-completed: var(--task-icon-color-completed, white);
+
 mgt-tasks,
 :host {
   font-family: var(--default-font-family, 'Segoe UI');
   display: flex;
   flex-direction: column;
-  background-color: var(--tasks-background-color, #f8f8f8);
+  background-color: $tasks-background-color;
   padding: var(--tasks-padding, 12px);
 }
 
@@ -579,7 +590,7 @@ mgt-tasks,
       color: white;
       cursor: pointer;
       display: flex;
-      align-items: flex-start;
+      align-items: $task-icon-alignment;
       margin: 21px 10px 20px 20px;
 
       user-select: none;
@@ -587,8 +598,9 @@ mgt-tasks,
       -ms-user-select: none;
       &.Complete {
         .TaskCheck {
-          background-color: $ms-color-sharedGreenCyan10;
-          border: solid 1px white;
+          background-color: $task-icon-background-completed;
+          border: $task-icon-border-completed;
+          color: $task-icon-color-completed;
         }
       }
     }
@@ -599,18 +611,18 @@ mgt-tasks,
       display: inline-block;
       width: 18px;
       height: 18px;
-      border-radius: 50%;
-      border: solid 1px $ms-color-gray120;
-      color: white;
+      border-radius: $task-icon-border-radius;
+      border: $task-icon-border;
+      color: $task-icon-color;
       display: flex;
       justify-content: center;
       align-items: center;
+      background-color: $task-icon-background;
 
       user-select: none;
       -moz-user-select: none;
       -ms-user-select: none;
-      &.Loading {
-        color: black;
+      &.Loading .TaskCheckContent {
         animation: rotateIcon 2s infinite linear;
       }
     }
