team search if no channels found

--- a/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -173,6 +173,9 @@ mgt-teams-channel-picker .channel-display {
     padding-top: 4px;
     padding-bottom: 4px;
   }
+  .hiding {
+    display: none;
+  }
   .blue-highlight {
     background-color: #deecf9;
   }
