--- a/src/components/sub-components/mgt-flyout/mgt-flyout.scss
+++ b/src/components/sub-components/mgt-flyout/mgt-flyout.scss
@@ -13,15 +13,20 @@
   display: none;
   position: absolute;
   z-index: 1;
-  opacity: 0;
-  transition-property: opacity;
-  transition-duration: 0.1s;
+  animation-duration: 300ms;
 }
 
 .root .flyout.visible {
   display: inline-block;
-  opacity: 1;
-  &.openLeft {
-    right: 0;
+  animation-name: fade-in;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
