--- a/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -103,6 +103,7 @@ mgt-teams-channel-picker .team-chosen-input {
 
 :host .people-chosen-list,
 mgt-teams-channel-picker .people-chosen-list {
+  min-height: 29px;
   display: flex;
   flex-wrap: wrap;
   vertical-align: middle;
@@ -123,21 +124,25 @@ mgt-teams-channel-picker .CloseIcon {
   right: 0;
   line-height: normal;
   font-family: 'FabricMDL2Icons';
-  padding-right: 8px;
+  padding-right: 10px;
   padding-left: 10px;
   margin-bottom: 1px;
-  margin-top: 1px;
   cursor: pointer;
+  color: #605e5c;
+  &:hover {
+    color: #000000;
+  }
 }
 
 .InputArrowIcon,
 mgt-teams-channel-picker .InputArrowIcon {
-  padding-top: 8px;
+  padding-bottom: 13px;
+  padding-top: 7px;
   position: absolute;
   right: 0;
   line-height: normal;
   font-family: 'FabricMDL2Icons';
-  padding-right: 8px;
+  padding-right: 10px;
   padding-left: 10px;
   cursor: pointer;
 }
@@ -150,11 +155,10 @@ mgt-teams-channel-picker .SearchIcon {
 
 :host .people-person,
 mgt-teams-channel-picker .people-person {
+  border: none;
   display: flex;
   margin: 4px 5px 0 0;
   align-items: center;
-  //background-color: rgba(196, 196, 196, 0.24);
-  border-radius: 15px;
   height: 24px;
   white-space: nowrap;
   overflow: hidden;
@@ -167,6 +171,11 @@ mgt-teams-channel-picker .people-person {
 
 :host .list-team,
 mgt-teams-channel-picker .list-team {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -o-user-select: none;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -199,6 +208,11 @@ mgt-teams-channel-picker .teams-list-fill {
 
 :host .channel-display,
 mgt-teams-channel-picker .channel-display {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -o-user-select: none;
   cursor: pointer;
   padding-left: 21px;
   padding-right: 20px;
@@ -353,14 +367,17 @@ mgt-teams-channel-picker .message-parent {
   justify-content: center;
   vertical-align: middle;
   .spinner {
-    border: 2px solid #f3f3f3; /* Light grey */
-    border-top: 2px solid #3498db; /* Blue */
+    border: 2px solid #c7e0f4; /* Light grey */
+    border-top: 2px solid #0078d4; /* Blue */
     border-radius: 50%;
     width: 20px;
     height: 20px;
     animation: spin 2s linear infinite;
   }
   .loading-text {
+    margin-top: 3px;
+    margin-left: 9px;
+    color: #0078d4;
   }
 }
 
