--- a/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -237,23 +237,45 @@ mgt-teams-channel-picker .list-team {
       height: 100%;
       top: 0;
       right: 0;
-      background-image: -webkit-linear-gradient(right, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
-      background-image: -moz-linear-gradient(right, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
-      background-image: -ms-linear-gradient(right, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
-      background-image: -o-linear-gradient(right, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
-      background-image: linear-gradient(to left, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+      background-image: -webkit-linear-gradient(right, $selection-background-color, rgba(255, 255, 255, 0));
+      background-image: -moz-linear-gradient(right, $selection-background-color, rgba(255, 255, 255, 0));
+      background-image: -ms-linear-gradient(right, $selection-background-color, rgba(255, 255, 255, 0));
+      background-image: -o-linear-gradient(right, $selection-background-color, rgba(255, 255, 255, 0));
+      background-image: linear-gradient(to left, $selection-background-color, rgba(255, 255, 255, 0));
     }
   }
 }
 
 :host .teams-channel-list-fill,
 mgt-teams-channel-picker .teams-channel-list-fill {
-  background-color: #f1f1f1;
+  background-color: $selection-hover-color;
+  .team-name {
+    width: 100%;
+    flex-flow: nowrap;
+    position: relative;
+    overflow: hidden;
+    white-space: nowrap;
+    background-color: transparent;
+    padding-right: 10px;
+    &:after {
+      content: '';
+      position: absolute;
+      width: 36px;
+      height: 100%;
+      top: 0;
+      right: 0;
+      background-image: -webkit-linear-gradient(right, $selection-hover-color, rgba(255, 255, 255, 0));
+      background-image: -moz-linear-gradient(right, $selection-hover-color, rgba(255, 255, 255, 0));
+      background-image: -ms-linear-gradient(right, $selection-hover-color, rgba(255, 255, 255, 0));
+      background-image: -o-linear-gradient(right, $selection-hover-color, rgba(255, 255, 255, 0));
+      background-image: linear-gradient(to left, $selection-hover-color, rgba(255, 255, 255, 0));
+    }
+  }
 }
 
 :host .teams-list-fill,
 mgt-teams-channel-picker .teams-list-fill {
-  background-color: #f1f1f1;
+  background-color: $selection-hover-color;
 }
 
 :host .channel-display,
@@ -280,15 +302,11 @@ mgt-teams-channel-picker .channel-display {
       height: 100%;
       top: 0;
       right: 0;
-      background-image: -webkit-linear-gradient(
-        right,
-        rgba(255, 255, 255, 1) rgba(255, 255, 255, 1),
-        rgba(255, 255, 255, 0)
-      );
-      background-image: -moz-linear-gradient(right, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
-      background-image: -ms-linear-gradient(right, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
-      background-image: -o-linear-gradient(right, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
-      background-image: linear-gradient(to left, rgba(255, 255, 255, 1), rgba(255, 255, 255, 0));
+      background-image: -webkit-linear-gradient(right, $selection-background-color, rgba(255, 255, 255, 0));
+      background-image: -moz-linear-gradient(right, $selection-background-color, rgba(255, 255, 255, 0));
+      background-image: -ms-linear-gradient(right, $selection-background-color, rgba(255, 255, 255, 0));
+      background-image: -o-linear-gradient(right, $selection-background-color, rgba(255, 255, 255, 0));
+      background-image: linear-gradient(to left, $selection-background-color, rgba(255, 255, 255, 0));
     }
   }
 
