--- a/src/components/mgt-person/mgt-person.scss
+++ b/src/components/mgt-person/mgt-person.scss
@@ -91,83 +91,83 @@ mgt-person .user-avatar {
   }
 
   &.pinkRed10 {
-    $background-color: var(--initials-background-color, $ms-color-sharedPinkRed10);
+    background-color: var(--initials-background-color, $ms-color-sharedPinkRed10);
   }
 
   &.red20 {
-    $background-color: var(--initials-background-color, $ms-color-sharedRed20);
+    background-color: var(--initials-background-color, $ms-color-sharedRed20);
   }
 
   &.red10 {
-    $background-color: var(--initials-background-color, $ms-color-sharedRed10);
+    background-color: var(--initials-background-color, $ms-color-sharedRed10);
   }
 
   &.orange20 {
-    $background-color: var(--initials-background-color, $ms-color-sharedOrange20);
+    background-color: var(--initials-background-color, $ms-color-sharedOrange20);
   }
 
   &.orangeYellow20 {
-    $background-color: var(--initials-background-color, $ms-color-sharedOrangeYellow20);
+    background-color: var(--initials-background-color, $ms-color-sharedOrangeYellow20);
   }
 
   &.green10 {
-    $background-color: var(--initials-background-color, $ms-color-sharedGreen10);
+    background-color: var(--initials-background-color, $ms-color-sharedGreen10);
   }
 
   &.green20 {
-    $background-color: var(--initials-background-color, $ms-color-sharedGreen20);
+    background-color: var(--initials-background-color, $ms-color-sharedGreen20);
   }
 
   &.cyan20 {
-    $background-color: var(--initials-background-color, $ms-color-sharedCyan20);
+    background-color: var(--initials-background-color, $ms-color-sharedCyan20);
   }
 
   &.cyan30 {
-    $background-color: var(--initials-background-color, $ms-color-sharedCyan30);
+    background-color: var(--initials-background-color, $ms-color-sharedCyan30);
   }
 
   &.cyanBlue10 {
-    $background-color: var(--initials-background-color, $ms-color-sharedCyanBlue10);
+    background-color: var(--initials-background-color, $ms-color-sharedCyanBlue10);
   }
 
   &.cyanBlue20 {
-    $background-color: var(--initials-background-color, $ms-color-sharedCyanBlue20);
+    background-color: var(--initials-background-color, $ms-color-sharedCyanBlue20);
   }
 
   &.blue10 {
-    $background-color: var(--initials-background-color, $ms-color-sharedBlue10);
+    background-color: var(--initials-background-color, $ms-color-sharedBlue10);
   }
 
   &.blueMagenta30 {
-    $background-color: var(--initials-background-color, $ms-color-sharedBlueMagenta30);
+    background-color: var(--initials-background-color, $ms-color-sharedBlueMagenta30);
   }
 
   &.blueMagenta20 {
-    $background-color: var(--initials-background-color, $ms-color-sharedBlueMagenta20);
+    background-color: var(--initials-background-color, $ms-color-sharedBlueMagenta20);
   }
 
   &.magenta20 {
-    $background-color: var(--initials-background-color, $ms-color-sharedMagenta20);
+    background-color: var(--initials-background-color, $ms-color-sharedMagenta20);
   }
 
   &.magenta10 {
-    $background-color: var(--initials-background-color, $ms-color-sharedMagenta10);
+    background-color: var(--initials-background-color, $ms-color-sharedMagenta10);
   }
 
   &.magentaPink10 {
-    $background-color: var(--initials-background-color, $ms-color-sharedMagentaPink10);
+    background-color: var(--initials-background-color, $ms-color-sharedMagentaPink10);
   }
 
   &.orange30 {
-    $background-color: var(--initials-background-color, $ms-color-sharedOrange30);
+    background-color: var(--initials-background-color, $ms-color-sharedOrange30);
   }
 
   &.gray30 {
-    $background-color: var(--initials-background-color, $ms-color-sharedGray30);
+    background-color: var(--initials-background-color, $ms-color-sharedGray30);
   }
 
   &.gray20 {
-    $background-color: var(--initials-background-color, $ms-color-sharedGray20);
+    background-color: var(--initials-background-color, $ms-color-sharedGray20);
   }
 }
 
