Fixed flyout flutter

--- a/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -35,8 +35,8 @@ mgt-people-picker .people-picker {
   padding-bottom: 8px;
 }
 
-:host .flyout .flyout-root,
-mgt-people-picker .flyout .flyout-root {
+:host .flyout-root,
+mgt-people-picker .flyout-root {
   margin: 7px 0px 0px 0px;
   padding: 0;
   box-shadow: 0px 1.3289px 2.65781px rgba(180, 180, 180, 0.182), 0px 1.3289px 2.65781px rgba(68, 68, 68, 0.3);
